--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 
             <div class="container">
                 <div class="row">
+                    <div class="col-lg-12 form-group">
+                        <label for="uri">JSON Request URI</label>
+                        <input type="text" id="uri" class="form-control form-control-lg"
+                               placeholder="your GitHub username">
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-12 text-center">
                         <a href="#" class="btn btn-primary btn-lg disabled" role="button" aria-pressed="false"
                            aria-disabled="true">Make Request</a>
@@ -78,6 +85,7 @@
                 // DOM Elements
                 var btnRequest = document.querySelector('.btn-primary');
                 var btnReset = document.querySelector('.btn-secondary');
+                var inputElement = document.querySelector('#uri');
                 var outputElement = document.querySelector('code');
 
                 btnRequest.addEventListener('click', function (event) {
@@ -85,7 +93,8 @@
                     event.preventDefault();
 
                     // Method Execution
-                    requestor.makeRequest('?q=cowglow', function (data) {
+                    var query = (inputElement.value) ? inputElement.value : 'cowglow';
+                    requestor.makeRequest('?q=' + query, function (data) {
                         // Attach Response to DOM
                         // var response = JSON.stringify(data);
                         outputElement.innerHTML = data;
