--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>XHR Prototype</title>
-        <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/bootstrap/bootstrap-grid.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
         <style>
             .Loading {
@@ -22,7 +21,7 @@
                 right: 0;
                 left: 0;
                 background-color: #222019;
-                background-image: url(assets/Loading-Rings.svg);
+                background-image: url(assets/Loading-animation.svg);
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: 5rem;
